# opiqo-multi

./: README.md  opiqo.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/org/acoustixaudio/opiqo/multi/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/lv2/gx_bajatubedriver.lv2/: gx_bajatubedriver.ttl  manifest.ttl
app/src/main/assets/lv2/gx_sloopyblue.lv2/: gx_sloopyblue.ttl  manifest.ttl
app/src/main/cpp/: CMakeLists.txt  FullDuplexPass.h  LV2OboeHost.hpp  LV2Plugin-Usage.md  LV2Plugin.hpp  LiveEffectEngine.cpp  LiveEffectEngine.h  jalv.cpp  jalv.h  jni_bridge.cpp  kitty.cpp  multi.cpp
app/src/main/cpp/include/jalv/: jalv_config.h
app/src/main/java/org/acoustixaudio/opiqo/multi/: AudioEngine.java  CollectionAdapter.java  CollectionFragment.java  MainActivity.java  ObjectFragment.java  UI.java
app/src/main/jniLibs/arm64-v8a/: jackd  serdi  sordi
app/src/main/jniLibs/armeabi-v7a/: jackd  serdi  sordi
app/src/main/jniLibs/x86/: jackd  serdi  sordi
app/src/main/jniLibs/x86/gx_sloopyblue-x86.lv2/: gx_sloopyblue.ttl
app/src/main/jniLibs/x86_64/: jackd  serdi  sordi
app/src/main/res/drawable/: semitrans.xml
app/src/main/res/layout/: activity_main.xml  add_plugin_dialog.xml  plugin.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/acoustixaudio/opiqo/multi/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
